Crash when exporting to Alembic if an object name contains a forward slash character #100485

Closed
opened 2022-08-18 20:24:10 +02:00 by Ryan Guy · 5 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15

Blender Version
Broken: version: 3.4.0, 3.0
Worked: not known

Short description of error
If an object name contains a forward slash character (/), exporting this object to Alembic results in an immediate crash.
For example, in a new Blend file, setting the default cube name to "Cu/be" can reproduce this issue.

Exact steps for others to reproduce the error

  1. Open Blend file
  2. Select File > Export > Alembic (.abc)
  3. Export Alembic

alembic_slash_bug.blend
alembic_slash_bug.crash.txt

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15 **Blender Version** Broken: version: 3.4.0, 3.0 Worked: not known **Short description of error** If an object name contains a forward slash character (/), exporting this object to Alembic results in an immediate crash. For example, in a new Blend file, setting the default cube name to "Cu/be" can reproduce this issue. **Exact steps for others to reproduce the error** 1. Open Blend file 2. Select **File > Export > Alembic (.abc)** 3. Export Alembic [alembic_slash_bug.blend](https://archive.blender.org/developer/F13401345/alembic_slash_bug.blend) [alembic_slash_bug.crash.txt](https://archive.blender.org/developer/F13401344/alembic_slash_bug.crash.txt)
Author

Added subscriber: @rlguy

Added subscriber: @rlguy
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Added subscriber: @warriorstar

Added subscriber: @warriorstar

There appears to be a second issue with the forward slash which may expand the scope of this regression: entities with names beginning with a forward slash are unable to be linked into a destination blend file. To reproduce:

  1. Start Blender 3.4.0.
  2. Rename the default cube to //foobar.
  3. Save the result as 3.4_naming_source.blend.
  4. Create a new blend file.
  5. From File -> Link... select the file 3.4_naming_source.blend and open the "Object" group.
  6. Observe that the default cube is named foobar, rather than //foobar.
  7. Select the cube and press the Link button.
  8. Observe that the cube does not appear in the scene.
  9. Switch to the "Blender File" Display Mode in the Outliner pane.
  10. Observe that 3.4_naming_source.blend is present as a linked file, but does not surface the cube in its respective tree, suggesting the cube was not linked successfully.
There appears to be a second issue with the forward slash which may expand the scope of this regression: entities with names beginning with a forward slash are unable to be linked into a destination blend file. To reproduce: 1. Start Blender 3.4.0. 2. Rename the default cube to `//foobar`. 3. Save the result as `3.4_naming_source.blend`. 4. Create a new blend file. 5. From *File -> Link...* select the file `3.4_naming_source.blend` and open the "Object" group. 6. Observe that the default cube is named `foobar`, rather than `//foobar`. 7. Select the cube and press the *Link* button. 8. Observe that the cube does not appear in the scene. 9. Switch to the "Blender File" Display Mode in the Outliner pane. 10. Observe that `3.4_naming_source.blend` is present as a linked file, but does not surface the cube in its respective tree, suggesting the cube was not linked successfully.
Bastien Montagne added this to the Pipeline, Assets & IO project 2023-02-09 15:39:30 +01:00
Philipp Oeser removed the
Interest
Pipeline, Assets & IO
label 2023-02-10 08:54:01 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-15 05:47:28 +02:00
Bastien Montagne removed this from the Pipeline, Assets & IO project 2023-07-03 13:03:16 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100485
No description provided.